# Exact_2026

./: .gitignore  electrostatics_clean_patch.diff  exact_api_submission.py  pyproject.toml  requirements.txt
tests/: test_answer_envelope.py  test_answer_mode_classifier.py  test_capacitor_contract.py  test_capacitor_energy_percent.py  test_capacitor_energy_percent_retrieval.py  test_capacitor_energy_ratio.py  test_capacitor_energy_ratio_retrieval.py  test_capacitor_engine.py  test_capacitor_lc_oscillation.py  test_capacitor_lc_retrieval.py  test_capacitor_parallel_e2e.py  test_capacitor_pending_examples.py  test_capacitor_q2_over_2c_batch.py  test_capacitor_replace_capacitor.py  test_capacitor_replace_dielectric.py  test_capacitor_replace_dielectric_retrieval.py  test_capacitor_retrieval.py  test_capacitor_short_circuit.py  test_capacitor_short_circuit_retrieval.py  test_capacitor_state.py  test_capacitor_state_work_scaling_batch.py  test_capacitor_system.py  test_debug_retrieval_cli.py  test_domain_contamination_guards.py  test_electrostatics_engine.py  test_electrostatics_equal_charge_chain.py  test_electrostatics_examples_primitive_batch.py  test_electrostatics_expanded_engine.py  test_electrostatics_geometry_builder.py  test_electrostatics_geometry_engine.py  test_electrostatics_geometry_faithfulness.py  test_electrostatics_intent_repair.py  test_electrostatics_retrieval_examples_coverage.py  test_electrostatics_v16_numeric_safe.py  test_electrostatics_v17_real_symbolic.py  test_electrostatics_zero_field_distance.py  test_equations_balanced_formula_examples.py  (+50 more)
(+94 files in other folders)
