[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-physics"
version = "0.1.0"
description = "Explainable multi-domain physics problem solver"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]